--- a/_config.yml
+++ b/_config.yml
@@ -47,12 +47,13 @@ author:
 
 # Add links to the sidebar.
 menu:
-  - title:             Example
-    url:               /example/
-  - title:             Documentation
-    url:               /docs/
+
   - title:             About
     url:               /about/
+  - title:              Example1
+    url:                /example1/
+  - title:              Example2
+    url:                /example2/ 
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
