--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -14,11 +14,11 @@ author1:
 
   # This photo will be used in the about section
   picture:
-    path:            /assets/img/me/me.jpeg
+    path:            /assets/img/me/me.png
     # srcset is optional, but can be used to provide higher res versions for retina displays
     srcset:
-      1x:            /assets/img/me/me.jpeg
-      2x:            /assets/img/me/me.jpeg
+      1x:            /assets/img/me/me.png
+      2x:            /assets/img/me/me.png
 
   # Social media icons in sidebar
   # Comment/uncommet to show/hide
